@@ -12,7 +12,8 @@ fakechroot (2.7-0) unstable; urgency=medium
     - Fixed execve(2) function to not expand argv0 and handle "#!" correctly.
       Thanks Mark Eichin.  Closes: #412774.
     - New eaccess(3) function backported from Klik.
-    - New functions: bind(2).  They support PF_UNIX sockets.
+    - New functions: bind(2), connect(2).  They support PF_UNIX sockets.
+      Closes: #413918.
     - More memory allocation for fakechroot_init.
   * test/fakechroot.sh:
     - Add cp, mkdir, chmod, rm.
